--- a/pyramidProject3/templates/form.jinja2
+++ b/pyramidProject3/templates/form.jinja2
@@ -37,8 +37,8 @@
         <form action="/login" method="POST">
             <input class="form__input" type="text" name="name" placeholder="Логин">
             <input class="form__input" type="password" name="password" placeholder="Пароль">
-            <input class="form__button sign" type="submit" name="request" value="Вход"></input>
-            <input type="submit" name="request" value="Регистрация"></input>
+            <input class="form__button sign" type="submit" name="request" value="enter"></input>
+            <input type="submit" name="request" value="registrate"></input>
         </form>
         <div class="header-wrap">
             <div class="header-top d-flex justify-content-between align-items-center">
